@@ -2,6 +2,11 @@
 # Changelog of the check_nwc_health plugin #
 ############################################
 
+2013-11-08
+- added support for role based login for Fritz Boxes (available since 
+  FRITZ!OS 5.50). Use --community for password, --username for username if
+  role based security is switched on.
+	
 2013-11-07 2.6
 - finished bgp-peer-status (focus on as numbers with --name2)
 - admin down with --interface-status can have any level with --mitigation
